<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/commonn_margin_pad"

        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btnCallout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray"
            android:text="@string/callout"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnWait"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray"
            android:text="@string/wait"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnPob"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray"
            android:text="@string/pob"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/commonn_margin_pad"
        android:visibility="visible"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray"
            android:text="@string/delivered"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:text="Report a problem"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>