<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"


    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        card_view:cardCornerRadius="7dp"
       >

  <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"


    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBtnDefault"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/commonn_margin_pad_xx"
            android:paddingTop="@dimen/commonn_margin_pad_xx"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fair_payment"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commonn_tv_xx" />


                <TextView
                    android:id="@+id/tvPickUpLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:gravity="center"
                    android:text="@string/for_job"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commonn_tv_xx" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/commonn_margin_pad_x">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/taxi_meter1_ic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                     android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taxi_meter" />

                    <EditText
                        android:background="@null"
                        android:id="@+id/tvFair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/commonn_margin_pad"
                        android:text="12 "
                        android:inputType="numberDecimal"
                        android:enabled="false"
                        android:textSize="@dimen/commonn_tv_xx" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/commonn_margin_pad_xxx"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/name_ic" />

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client" />

                    <TextView

                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/commonn_margin_pad"
                        android:text="12 $"
                        android:textSize="@dimen/commonn_tv_xx" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/commonn_margin_pad_x">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/time_ic" />

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />

                    <TextView

                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/commonn_margin_pad"
                        android:text="12 $"
                        android:textSize="@dimen/commonn_tv_xx" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/commonn_margin_pad_xxx"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/distance_new_ic" />

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance" />

                    <TextView

                        android:id="@+id/tvDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/commonn_margin_pad"
                        android:text="12 $"
                        android:textSize="@dimen/commonn_tv_xx" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal"
          android:weightSum="2"
          android:layout_margin="@dimen/commonn_margin_pad_x"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <Button
              android:id="@+id/btnCancel"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:minWidth="120dp"
              android:text="@string/adjust"
              android:layout_marginRight="@dimen/commonn_margin_pad"
              android:textColor="@color/white"
              android:background="@drawable/button_default"
              android:layout_height="40dp" />

          <Button
              android:id="@+id/btnConfirm"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_marginLeft="@dimen/commonn_margin_pad"
              android:minWidth="120dp"
              android:text="@string/next"
              android:textColor="@color/white"
              android:background="@drawable/button_default"
              android:layout_height="40dp" />

      </LinearLayout>

</LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>